added some extra stuff

--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
       <div class="box box7"></div>
       <div class="box box8"></div>
     </div>
+    <div class="wrapper">
+      <h1 class="title">Infinite Scroll Animation</h1>
+      <p class="description">
+        This is a basic project done by Marlon. The idea came from a
+        coding-youtuber called <a href="">Slaying the dragon</a>
+      </p>
+    </div>
   </body>
 </html>
